@startuml ER_Diagram_Ecommify
!theme plain
hide circle
skinparam linetype ortho

' Entidades principales
entity "customers" as customers {
  * customer_id : varchar [PK]
  --
  * customer_unique_id : varchar
  * zip_code_prefix : varchar [FK]
  city : varchar
  state : varchar
}

entity "geolocation" as geolocation {
  * zip_code_prefix : varchar [PK]
  --
  lat : float
  lng : float
  geom : geometry(Point, 4326) <<PostGIS>>
  city : varchar
  state : varchar
}

entity "sellers" as sellers {
  * seller_id : varchar [PK]
  --
  * zip_code_prefix : varchar [FK]
  city : varchar
  state : varchar
}

entity "products" as products {
  * product_id : varchar [PK]
  --
  category_name : varchar
  product_name : text
  specifications : jsonb
  photos : text[]
}

entity "orders" as orders {
  * order_id : varchar [PK]
  --
  * customer_id : varchar [FK]
  status : varchar
  purchase_timestamp : timestamp
  delivered_customer_date : timestamp
}
note right of orders
  Particionada por mes 
  (purchase_timestamp)
end note

entity "order_items" as order_items {
  * order_id : varchar [PK, FK]
  * order_item_id : int [PK]
  --
  * product_id : varchar [FK]
  * seller_id : varchar [FK]
  price : decimal
  freight_value : decimal
}

entity "order_payments" as order_payments {
  * order_id : varchar [PK, FK]
  * payment_sequential : int [PK]
  --
  payment_type : varchar
  payment_installments : int
  payment_value : decimal
}

' Relaciones
customers }|--|| geolocation
sellers }|--|| geolocation
orders }|--|| customers
order_items }|--|| orders
order_items }|--|| products
order_items }|--|| sellers
order_payments }|--|| orders

@enduml
